[package]
name = "rust-web-poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0" # new version of actix not compatible with redis actors
actix-web = "3"
actix-redis = "0.9.2"
redis-async = "0.6.3"
actix-cors = "0.5.4"
serde = "1.0.126"
env_logger = "0.8.4"
